--- a/_notes/§ Дисциплина.md
+++ b/_notes/§ Дисциплина.md
@@ -37,7 +37,8 @@ tag: moc
 ---
 - [[Дисциплина это не про усилие или силу воли. Это про осознание, выбор и решение]]
 - [[К черту мотивацию, вам нужна дисциплина]]
-
+- [[Разница между движением и действием]]
+- [[Интерес как сильный мотивирующий фактор]]
 
 
 
