--- a/_notes/§ Маркетинг и клиентские отношения.md
+++ b/_notes/§ Маркетинг и клиентские отношения.md
@@ -2,18 +2,22 @@
 layout: note
 title: Маркетинг и клиентские отношения
 id: Маркетинг и клиентские отношения
-tag: seed
+tag: moc
 ---
 
-## Понятия и определения
-- Маркетинг=помочь клиенту измениться. Знать кому и как именно нужно измениться и помочь совершить это изменение [Сет Годин](https://zamesin.ru/books-this-is-marketing)
+### Понятия и определения
+- Маркетинг, с точки зрения клиентских отношений - это помочь клиенту измениться. Знать кому и как именно нужно измениться и помочь совершить это изменение [Сет Годин](https://zamesin.ru/books-this-is-marketing)
 >*(прим.мое: Изменение, в свою очередь привносит какое-то ==ощущение==. Ощущение - конечная цель покупки, а значит и маркетинга)*
 - Люди рассказывают друг другу истории. Вы должны уметь рассказывать истории про изменения, которые получит клиент с вашим продуктом. И эти истории должны быть простыми и интересными, чтобы люди пересказывали их друг другу
 - «Люди похожие на нас совершают такие поступки». Один из ключевых тезисов — потребность ассоциировать себя с определёнными группами людей и восприятие нами своего статуса. Когда мы принимаем решения платить налоги или уклоняться от уплаты, мы слабо осознанно задаём себе вопрос: «Платят ли налоги люди, на которых я хочу быть похож?». Когда мы покупаем свежевыжатый сок мы говорим себе: «Люди похожие на меня пьют дорогой свежевыжатый сок потому что он полезен для здоровья»
 >*(прим.мое: изменение и ощущения должны встраиваться в образ жизни, которому клиент хочет соответствовать)*
 
+---
+Маркетинг - бизнес-функция управления [[Ключевой процесс создания ценности|ключевым процессом создания ценности]]
 
-[[Jobs To Be Done (JTBD)]] - теория о поведении покупателя
+
+
+[[Jobs To Be Done (JTBD)]] - теория о поведении покупателя,
 
 
 
@@ -25,4 +29,13 @@ tag: seed
 
 
 ___
-[[Концепция маркетинга 5A]]
+### Заметки:
+- [[Концепция маркетинга 5A]]
+- [[Карта путешествия потребителя (CJM)]]
+- [[Карта Ценностного Предложения]]
+
+---
+### Ссылки:
+- [Артем Азевич, руководитель трекинга ФРИИ: как ABCDX-сегментация помогает увеличить выручку стартапов](https://www.youtube.com/watch?v=cvDoyChlaCo)
+- [Социальное доказательство - Фёдоров](https://fdrv.me/socialnoe-dokazatelstvo/)
+- [Топ лучших выводов из книг по маркетингу и продажам](https://knigli.ru/marketing-i-prodazhi/)
