--- a/_notes/§ Проактивность.md
+++ b/_notes/§ Проактивность.md
@@ -5,10 +5,6 @@ id: Проактивность
 tag: seed
 ---
 
-
-
-
-
 Проактивность - парадигма в основе которой лежит представление человека, как субъекта всякого действия в его жизни. 
 
 Быть проактивным означает осознать свои глубинные ценности и цели, действовать в соответствии со своими жизненными принципами, независимо от условий и обстоятельств. Способность [[К черту мотивацию, вам нужна дисциплина|подчинить импульсивную реакцию]] своим ценностям составляет сущность проактивной личности
@@ -21,6 +17,7 @@ tag: seed
 4) в способности ставить значимые цели и стремиться к их достижению;
 5) в готовности активно воздействовать на условия среды в противоположность пассивному приспособлению
 
+Проактивность это не какое-то статическое свойство или черта характера. Это качество мышления и действия. Любое действие может быть проективным вне зависимости от предыдущего опыта. Это предвосхищающая активность, т.е. заботиться о чем либо заранее. Заранее по чуть-чуть наполнять ценностью какое-то направление. Проблемы не решать, а предотвращать. Для этого четко представлять результат и просчитывать последствия
   
 
 ---
