--- a/_notes/§ Системное мышление.md
+++ b/_notes/§ Системное мышление.md
@@ -8,7 +8,7 @@ tag: toc
 
 - [[Все в системе связанно причинно-следственными связями]]
 - [[Эмерджентность]]
-- [[Теория Ограничений (ТОС)]]   
+- [[Теория Ограничений Систем (ТОС)]]   
 - [[Общая Теория Систем]]
 
 
