--- a/_notes/Визуальное мышление.md
+++ b/_notes/Визуальное мышление.md
@@ -2,25 +2,31 @@
 layout: note
 title: Визуальное мышление
 id: Визуальное мышление
-tag: seed
+tag: moc
 ---
 
-Визуальное мышление - оперирование в своем сознании визуальными образами для анализа и синтеза новой информации, а также усвоении, хранении и передачи готовой информации, следуя определенным [[Принципы визуального восприятия|принципам визуального восприятия]] и паттернам
+Визуальное мышление - оперирование в своем сознании визуальными образами для анализа и синтеза новой информации, а также усвоении, хранении и передачи готовой информации, следуя определенным [[Принципы визуального восприятия|принципам и паттернам визуального восприятия]]
 
 Такое оперирование образами является основой большинства современных методик запоминания - [[Мнемотехника|мнемотехники]]
 
-Применительно к бизнесу, визуальное мышление - один из основных каналов взаимодействия бизнеса с целевой аудиторией, посредством визуальной рекламы, визуального контента
+Визуальное мышление - процесс логического мышления, при помощи которого производится решение интеллектуальных вопросов, опираясь на визуальные внутренние образы, такие как представление или воображение. Этот вид творческого мышления создает новые воззрения, визуальные формы которые несут новую смысловую нагрузку и представляют значение очевидным. Визуальное мышление представляет собой продолжение и завершение образного отражения реальных особенностей объектов, началом которого являются наглядное, действенное и образное мышления
 
 Оперирование текстом, также можно отнести к процессам визуального мышления, так как в данном случае, оперируем образами символов и блоков символов. Особенно когда, перед текстом стоят прагматичные задачи в [[Три функции эффективного коммерческого сообщения|убеждении, научении или обьяснении]]
 
-Прикладным направлением визуального мышления является [[Визуальные заметки. Visual Note-taking]], методики сильно упрощающие работу с информацией: конспектирование, структурирование, запоминание.
+Прикладным направлением визуального мышления является [[Визуальные заметки. Visual Note-taking (VNT)]], методики сильно упрощающие работу с информацией: конспектирование, структурирование, запоминание.
 
-[[Как работают прикладные методы визуального мышления]] - визуальные коспекты, интеллект карты, концепт-карты и иные мотодологии графического представления мыслительных образоц и процессов
+[[Как работают прикладные методы визуального мышления]] - визуальные конспекты, интеллект карты, концепт-карты и иные методологии графического представления мыслительных образов и процессов
+
+[[Модель вероятности осознанной обработки информации (ELM)]] описывает два пути обработки сообщений. Исходя из нее, получатель сообщения должен быть [[Мотивация к восприятию сообщения|замотивирован в восприятии этого сообщения]]. Так сообщении достигнет результата и будет эффективным. 
+
+### Визуальное мышление в бизнесе
+
+Применительно к бизнес-среде, визуальное мышление - один из основных каналов взаимодействия бизнеса с целевой аудиторией, посредством визуальной рекламы, визуального контента.
+
+Прикладным методом использования ВМ является [[Визуализация данных]]
 
 
-
-[[Модель вероятности осознанной обработки информации (ELM)]] описывает два пути обработки сообщений
 
 ---
-[Когнитивная психология: теория дуального процесса мышления](https://lpgenerator.ru/blog/2015/08/07/kognitivnaya-psihologiya-teoriya-dualnogo-processa-myshleniya/)
+- [Когнитивная психология: теория дуального процесса мышления](https://lpgenerator.ru/blog/2015/08/07/kognitivnaya-psihologiya-teoriya-dualnogo-processa-myshleniya/)
 
