--- a/_notes/Жить другой жизнью.md
+++ b/_notes/Жить другой жизнью.md
@@ -1,4 +1,9 @@
-
+---
+layout: note
+title: Жить другой жизнью 
+id: Жить другой жизнью
+tag: seed
+---
 
 Чтобы жить другой жизнью (более счастливой, более комфортной или более богатой, не важно), нужно не делать что-то другое. Нужно быть другим человеком.
 
