--- a/_notes/Изменения.md
+++ b/_notes/Изменения.md
@@ -61,3 +61,4 @@ https://insertphilosophyhere.com/aristotles-theory-of-change/
 ---
 - [[Жить другой жизнью]]
 - [[Изменения - это обучение]]
+- [[Изменение привычек]]
