--- a/_notes/К черту мотивацию, вам нужна дисциплина.md
+++ b/_notes/К черту мотивацию, вам нужна дисциплина.md
@@ -6,12 +6,9 @@ tag: tree
 ---
 
 
-
-
 Если вы желаете что-то сделать, то есть два способа этого достичь.
 
 Первый, более распространённый и в значительной мере неправильный вариант — **попытаться мотивировать себя**.
-
 Второй — воспитание дисциплины.
 
 В чём же разница?
@@ -21,11 +18,9 @@ tag: tree
 Но это совершенно неправильный путь.
 
 **Дисциплина, напротив, отделяет действие от настроений и чувств**
-
 **Успешное решение задач приводит к внутренним состояниям, которые хронические прокрастинаторы считают необходимым условием для начала решения задач.**
 
 Говоря проще, **не надо ждать, когда вы достигнете олимпийской формы, чтобы приступить к тренировкам. Надо тренироваться, чтобы достичь олимпийской формы.**
-
 **Если ты убежден, что действие обусловлено чувствами, то ожидание правильного настроения становится особенно коварной формой промедления.**
 
 По своей сути мотивация устремлённости к чему-то является навязыванием _инфантильной фантазии_, что мы должны делать только то, что _нам нравится_. Проблему тогда можно сформулировать так: **«Как мне** _**заставить себя захотеть делать**_ **то, что я рационально решил сделать?»** Нет, это плохо.
@@ -61,4 +56,7 @@ tag: tree
 Дисциплина — система, тогда как мотивация аналогична целям. Здесь есть симметрия. Дисциплина является более или менее самоподдерживающейся и постоянной, тогда как мотивация — это явление вспышек.
 
 **Как развивать дисциплину? Выстраивая привычки — начинать с как можно меньшего дела, которым вы можете управлять, даже микроскопического, и набирать обороты, реинвестируя результат во всё более крупные изменения в вашей повседневности, создавать цикл положительной обратной связи**.
+
+---
+- [К чёрту мотивацию, вам нужна дисциплина / Хабр](https://habr.com/ru/articles/326904/)
 
