--- a/_notes/Как работают прикладные методы визуального мышления.md
+++ b/_notes/Как работают прикладные методы визуального мышления.md
@@ -6,4 +6,14 @@ tag: seed
 ---
 
 
- Как работают визуальные коспекты, интеллект карты, концепт-карты и иные мотодологии графического представления мыслительных образов и процессов
+Мы не можем полностью контролировать ход мыслительных процессов. 
+Поэтому можно создать внешние модели, ассоциированные с мышлением и управляя этими моделями, косвенно влиять и на само мышление. 
+
+Оперирование графическими образами и есть такие модели: 
+- [[Мнемотехника]]
+- [[Визуальные заметки. Visual Note-taking (VNT)]]
+- [[Интеллект-карты. Mind Map]]
+
+
+---
+- [[Визуальное мышление]]
