--- a/_notes/Концепция маркетинга 5A.md
+++ b/_notes/Концепция маркетинга 5A.md
@@ -1,13 +1,20 @@
+---
+layout: note
+title: Концепция маркетинга 5A
+id: Концепция маркетинга 5A
+tag: seed
+---
+
+Концепция 5А пришла на смену более ранней концепции AIDA. Автором концепции является Филипп Котлер
 
 **Aware – Знакомство**
 На этой стадии, покупатель лишь знакомится с брендами, рекламой и/или рекомендациями агентов влияния, друзей и семьи. Иногда он не особо в этом знакомстве заинтересован.
-
 
 **Appeal – Интерес**
 Информация, которую предоставляют бренды в своих месседжах, попадает или в кратковременную, или в долговременную память потребителя. На этой стадии окружение потребителя формирует у него симпатию к бренду. Этот этап идет вразрез с традиционной моделью AIDA, в которой все внимание уделяется потребителю.
 
 **Ask – Исследование**
-На этой стадии потенциальный покупатель исследует продукцию бренда, которым он заинтересовался благодаря информации от агентов влияния, друзей и семьи, а также от самого бренда. Потребители активно общаются друг с другом, и чаще всего их общение строится по принципу «попроси совета – дай совет», и в конце концов это напрямую влияет на ослабление или усиление симпатии к бренду.
+На этой стадии потенциальный покупатель изучает продукцию бренда, которым он заинтересовался благодаря информации от агентов влияния, друзей и семьи, а также от самого бренда. Потребители активно общаются друг с другом, и чаще всего их общение строится по принципу «попроси совета – дай совет», и в конце концов это напрямую влияет на ослабление или усиление симпатии к бренду.
 
 **Act – Действие**
 Действие не ограничивается лишь покупкой, он также касается и использования продукта, а также послепродажного сервиса.
