--- a/_notes/Культура планирования в управлении бизнесом.md
+++ b/_notes/Культура планирования в управлении бизнесом.md
@@ -14,7 +14,7 @@ tag: seed
 - Разработать удобные инструменты и методы
 - Нарастить [[Изменение привычек|привычки]] связанные с планированием в бизнесе
    
-
+Планирование в бизнесе - это принятие обязательств и ответственности за результат
 
 ___
 
