--- a/_notes/Три функции эффективного коммерческого сообщения.md
+++ b/_notes/Три функции эффективного коммерческого сообщения.md
@@ -11,8 +11,9 @@ tag: seed
 
 [[Эффективные коммуникации в бизнес-среде|Коммерческим сообщением]], здесь и далее, называется сообщение как единица коммуникаций применительно к бизнес среде, в рекламе и маркетинге, бизнес-планировании, обучении и работе с персоналом (HR)
 
-Как и всякое сообщение оно достигает получателя двумя путями, согласно [[Модель вероятности осознанной обработки информации (ELM)]], центральным, основным и периферийным
+Как и всякое сообщение оно достигает получателя двумя путями, согласно [[Модель вероятности осознанной обработки информации (ELM)]], центральным, основным и периферийным. Таким образом, работа коммерческого сообщения происходит в самом сознании получателя. Это важно учитывать при [[Этапы создания эффективного коммерческого сообщения|проектировании коммерческого сообщения]]
 
+Суть дизайна, как дисциплины и деятельности, и состоит в проектировании восприятия и реакции потребителя дизайна. [[Дизайн - это инженерная дисциплина]]
 
 ### 1. Убедить
 Первая задача эффективного коммерческого сообщения - убедить получателя и побудить его совершить целевое действие
