--- a/_notes/Эффективные коммуникации в бизнес-среде.md
+++ b/_notes/Эффективные коммуникации в бизнес-среде.md
@@ -19,8 +19,12 @@ tag: moc
 
 {текст перегружен. Порезать по Ильяхову}
 
+![[Эффективные коммуникации в бизнес-среде. 3.png]]
+
+
 ---
 - [[§ Системный подход]]
 - [[§ Системное мышление]]
 - [[Три функции эффективного коммерческого сообщения]]
 - [[Визуальное мышление]]
+----
