--- a/_notes/Изменение привычек.md
+++ b/_notes/Изменение привычек.md
@@ -70,8 +70,9 @@ tag: tree
 
 
 
-[[Реализационное намерение]]  
-[[Контекстное планирование]]
+- [[Реализационное намерение]]  
+- [[Контекстное планирование]]
+- [[Программа выработки полезных привычек]]
 	
 
 
