--- a/_notes/Цифровой сад.md
+++ b/_notes/Цифровой сад.md
@@ -5,13 +5,11 @@ id: Цифровой сад
 tag: tree
 ---
 
-
-
 Обычно садом называют некоторую огороженную территорию, которой уделяется повышенное внимание и забота. Растут в саду чаще всего деревья, плодовые или декоративные растения. И что бы не выращивали в саду, ценность имеет не только результат, в виде цветов или плодов, но и сам процесс
 
 Примерно такой же подход используется и в деле выращивания знаний. Идея, зарожденная зерном, при должной заботе может вырасти в устойчивую теорию, персональную или публичную. Но может и зачахнуть, если окажется неперспективной. Самое главное, что это происходит практически естественным путем
 
-В подходе Digital Garden вообще много органического и естественного. В противовес традиционным формам организации информации в виде списков, категорий и иерархий мы мыслим совершенно по другому. Путь нашей мысли движется по ассоциативным путям, без всякой строгой структуры и предопределенности
+В подходе Digital Garden вообще много органического и естественного. В противовес традиционным формам организации информации в виде списков, категорий и иерархий мы мыслим совершенно по другому. Путь нашей мысли движется по [[Как мы думаем|ассоциативным путям]], без всякой строгой структуры и предопределенности
 
 Цифровой сад это один из примеров подхода [[Публичная работа|публичной работы]]
 
@@ -27,7 +25,8 @@ tag: tree
 > - TOC - содержание, таблица с перечислением заметок, без описания связей и вводной информации по заметкам в ней содержащимся
 
 
-###### Почитать еще про цифровые сады (Digital Garden):
+---
+### Почитать еще про цифровые сады (Digital Garden):
 - [Цифровые сады как уникальное явление современного виртуального пространства](https://zttl.space/t/czifrovye-sady-kak-unikalnoe-yavlenie-sovremennogo-virtualnogo-prostranstva/349/35)
 - [Digital Gardening Tools and Resources](https://github.com/MaggieAppleton/digital-gardeners)
 - [How to set up your own digital garden](https://nesslabs.com/digital-garden-set-up)
