Update Эффективные коммуникации в бизнес-среде.md

--- a/_notes/Эффективные коммуникации в бизнес-среде.md
+++ b/_notes/Эффективные коммуникации в бизнес-среде.md
@@ -19,8 +19,9 @@ tag: moc
 
 {текст перегружен. Порезать по Ильяхову}
 
-![[Эффективные коммуникации в бизнес-среде. 3.png]]
-
+<p>
+<img src="/assets/Эффективные коммуникации в бизнес-среде. 3.png">
+</p>
 
 ---
 - [[§ Системный подход]]
