--- a/_notes/§ Бизнес.md
+++ b/_notes/§ Бизнес.md
@@ -12,7 +12,7 @@ tag: toc
 **- Комплексный.** Эта характеристика означает стремление бизнеса закрыть сразу комплекс потребностей целевой аудитории. Пример с автосалоном: клиент автосалона не только покупает новый автомобиль, но и ремонтирует, покупает запчасти и расходники, хранит шины, оформляет страховку, меняет по trade-in на новый.
 **- Технологичный**. Современные условия рынка не позволят бизнесу отставать в технологическом развитии. Применение последних технологий залог стабильной конкурентоспособности. 
 
-### Избранные мной подходы, модели и концепции управления в текущем проекте
+### Избранные мной подходы, модели и концепции управления в текущих проектах
 - [[Регулярный менеджмент]]
 - [[Data-driven подход в маркетинге и менеджменте]]
 - [[Теория Ограничений Систем (ТОС)]]
@@ -20,7 +20,6 @@ tag: toc
 ### Связанные темы
 - [[§ Менеджмент]]
 - [[§ Маркетинг и клиентские отношения]]
-
 
 ###  Заметки
 - [[Бизнес - это непрерывное исследование]]
