--- a/_notes/Арете бизнеса - постоянный прирост.md
+++ b/_notes/Арете бизнеса - постоянный прирост.md
@@ -5,8 +5,8 @@ id: Арете бизнеса - постоянный прирост
 tag: seed
 ---
 
-Успешность бизнеса выражается не только в абсолютных но и в относительных показателях.
-Арете успешного бизнеса - постоянный прирост ценности в каждом бизнес-процессе. 
+Успешность бизнеса выражается не только в абсолютных, но и в относительных показателях.
+Арете успешного бизнеса - постоянный прирост [[Ключевой процесс создания ценности|ценности]] в каждом [[Управление бизнес-процессами (BPM)|бизнес-процессе]] 
 
 Постоянный прирост, кроме этого обеспечивает бизнес свойством [[антихрупкости]]: даже если произойдет сильное потрясение, дельта прироста сможет компенсировать потери 
 
