--- a/_notes/Визуальное мышление.md
+++ b/_notes/Визуальное мышление.md
@@ -5,7 +5,7 @@ id: Визуальное мышление
 tag: moc
 ---
 
-Визуальное мышление - оперирование в своем сознании визуальными образами для анализа и синтеза новой информации, а также усвоении, хранении и передачи готовой информации, следуя определенным [[Принципы визуального восприятия|принципам и паттернам визуального восприятия]]
+Визуальное мышление - оперирование в своем сознании визуальными образами для анализа и синтеза новой информации, а также усвоении, хранении и передачи готовой информации, следуя определенным [[Принципы визуального восприятия. Гештальт|принципам и паттернам визуального восприятия]]
 
 Такое оперирование образами является основой большинства современных методик запоминания - [[Мнемотехника|мнемотехники]]
 
