--- a/_notes/Давление бизнес-среды создает хаос в системе бизнеса.md
+++ b/_notes/Давление бизнес-среды создает хаос в системе бизнеса.md
@@ -6,9 +6,9 @@ tag: seed
 ---
 
 
-Система бизнеса постоянно испытывает давления внешней среды и стремится к усложнению, а при отсутствии контроля к саморазрушению
+[[§ Системный подход|Система бизнеса]] постоянно испытывает давления внешней среды и стремится к усложнению, а при отсутствии контроля к саморазрушению
 
-Без контроля бизнес-процессы рассыпаются. Сотрудники не выполняют стандарты, отчетность не ведется, аналитика не собирается, цели бизнеса выходят из фокуса
+Без контроля [[Управление бизнес-процессами (BPM)|бизнес-процессы]] рассыпаются. Сотрудники не выполняют стандарты, отчетность не ведется, аналитика не собирается, цели бизнеса выходят из фокуса
 
 Контроль за системой может быть внешним или встроенным (самообучающиеся и самоконтролируемые системы) Такой встроенный контроль может быть реализован с помощью системы индикаторов
 
