--- a/_notes/Закон Хика.md
+++ b/_notes/Закон Хика.md
@@ -5,10 +5,22 @@ id: Закон Хика
 tag: seed
 ---
 
-Закон Хика – подтвержденная экспериментально теория о том, что количество информации, которая поступает в мозг человека, влияет на время, которое она тратит на принятие решения
+Закон Хика – подтвержденная экспериментально теория о том, что количество информации, которая поступает в мозг человека, влияет на время, которое он тратит на принятие решения.
+Время, необходимое для принятия решения, увеличивается с количеством и сложностью вариантов.
 
+### Выводы
 
+1.  Сведите к минимуму выбор, когда время отклика имеет решающее значение для увеличения времени принятия решения.
+2.  Разбивайте сложные задачи на более мелкие шаги, чтобы уменьшить когнитивную нагрузку.
+3.  Не перегружайте пользователей, выделяя рекомендуемые параметры.
+4.  Используйте прогрессивную адаптацию, чтобы минимизировать когнитивную нагрузку для новых пользователей.
+5.  Будьте осторожны, не упрощайте до абстракции.
 
+Закон Хика (или Закон Хика-Хаймана) назван в честь группы британских и американских психологов Уильяма Эдмунда Хика и Рэя Хаймана. В 1952 году эта пара намеревалась изучить взаимосвязь между количеством присутствующих стимулов и временем реакции человека на любой данный стимул. Как и следовало ожидать, чем больше стимулов на выбор, тем больше времени требуется пользователю, чтобы принять решение, с каким из них взаимодействовать. Пользователям, заваленным выбором, нужно время, чтобы интерпретировать и принять решение, что дает им работу, которую они не хотят
 
 ---
-[Закон Хика — как ускорить принятие решений пользователями](https://vc.ru/design/189134-ux-dizayn-zakon-hika-kak-uskorit-prinyatie-resheniy-polzovatelyami)
+- [Закон Хика — как ускорить принятие решений пользователями](https://vc.ru/design/189134-ux-dizayn-zakon-hika-kak-uskorit-prinyatie-resheniy-polzovatelyami)
+- [Hick’s Law | Laws of UX](https://lawsofux.com/hicks-law/)
+- [The Choice Overload Effect: Why simplicity is the key to perfecting your experience | by Jennifer Clinehens | Choice Hacking | Medium](https://medium.com/choice-hacking/choice-overload-why-simplicity-is-the-key-to-winning-customers-2f8e239eaba6)
+
+
