--- a/_notes/Концепция прибыли в бизнесе.md
+++ b/_notes/Концепция прибыли в бизнесе.md
@@ -5,6 +5,6 @@ id: Концепция прибыли в бизнесе
 tag: seed
 ---
 
-Прибыль - не цель бизнеса, но его необходимое условие существования, с точки зрения среды - обязанность 
+Прибыль - не цель [[§ Бизнес|бизнеса]], но его необходимое условие существования, с точки зрения среды - обязанность 
 
-Прибыль - выражение ценности которую создает бизнес
+Прибыль - выражение ценности которую создает бизнес для окружающей среды. Поэтому управление прибылью сводится к управлению создаваемой бизнесом ценностью. На прибыль нельзя влиять прямым образом, на создаваемую ценность можно
