--- a/_notes/Принципы макета визуального сообщения.md
+++ b/_notes/Принципы макета визуального сообщения.md
@@ -5,7 +5,7 @@ id: Принципы макета визуального сообщения
 tag: seed
 ---
 
-Принципы макета визуального макета опираются на [[Принципы визуального восприятия]]
+Принципы макета визуального макета опираются на [[Принципы визуального восприятия. Гештальт]]
 
 
 #### Баланс
