--- a/_notes/Три функции эффективного коммерческого сообщения.md
+++ b/_notes/Три функции эффективного коммерческого сообщения.md
@@ -22,3 +22,6 @@ tag: seed
 [[Четыре мотивационные стратегии в модели ARCS Джона Келлера]]
 
 ### 3. Объяснить и рассказать
+Обьяснить какое-либо явление
+
+![[Pasted image 20230528195230.png]]
