--- a/_notes/Визуализация данных.md
+++ b/_notes/Визуализация данных.md
@@ -7,12 +7,13 @@ tag: moc
 
 Визуализация данных – это процесс использования [[Визуальное мышление|визуальных]] элементов, таких как диаграммы, графики или карты, для представления данных. Он переводит сложные, масштабные или числовые данные в визуальное представление, которое легче обрабатывать. 
 
-Инструменты визуализации данных улучшают и автоматизируют процесс визуальной передачи данных для обеспечения точности и детализации
+Инструменты визуализации данных улучшают и автоматизируют процесс визуальной передачи данных для обеспечения точности и детализации. 
+
+Визуализация данных используется в [[Data Driven Desicion Making. Принятие решений на основе данных|Data Driven подходе]]
 
 
 ---
-### Инструменты и сервисы
+##### Инструменты и сервисы
+[RAWGraphs](https://www.rawgraphs.io/) - A free and open source tool for data visualization
 
-[RAWGraphs](https://www.rawgraphs.io/)
-**A free and open source tool for data visualization**
 
