--- a/_notes/Изменения - это обучение.md
+++ b/_notes/Изменения - это обучение.md
@@ -4,4 +4,4 @@ title: Избранные заметки
 id: Избранные заметки
 tag: seed, изменения, обучение
 ---
-
+Всякий новый образ действий и мыслей есть изменение нейронной структуры мозга
