--- a/_notes/Три функции эффективного коммерческого сообщения.md
+++ b/_notes/Три функции эффективного коммерческого сообщения.md
@@ -24,4 +24,4 @@ tag: seed
 ### 3. Объяснить и рассказать
 Обьяснить какое-либо явление
 
-![[Pasted image 20230528195230.png]]
+![](../assets/Pasted%20image%2020230528214440.png)
