--- a/_notes/Цифровой сад.md
+++ b/_notes/Цифровой сад.md
@@ -25,9 +25,12 @@ tag: tree
 > - TOC - содержание, таблица с перечислением заметок, без описания связей и вводной информации по заметкам в ней содержащимся
 
 
+
 ---
 ### Почитать еще про цифровые сады (Digital Garden):
 - [Цифровые сады как уникальное явление современного виртуального пространства](https://zttl.space/t/czifrovye-sady-kak-unikalnoe-yavlenie-sovremennogo-virtualnogo-prostranstva/349/35)
 - [Digital Gardening Tools and Resources](https://github.com/MaggieAppleton/digital-gardeners)
 - [How to set up your own digital garden](https://nesslabs.com/digital-garden-set-up)
 - [Your friend Joel's digital garden](https://joelhooks.com/digital-garden)
+
+![](../assets/Pasted%20image%2020230528215535.png)
